fix nav links on narrow devices

--- a/src/js/components/NavBar.scss
+++ b/src/js/components/NavBar.scss
@@ -1,4 +1,5 @@
 $navbar-height: 50px;
+$navbar-header-width: 150px;
 
 .NavBar {
     width: 100%;
@@ -15,17 +16,18 @@ $navbar-height: 50px;
     }
 
     &-header {
-        width: 160px;
+        min-width: $navbar-header-width;
+        width: $navbar-header-width;
         height: $navbar-height;
-        padding: 15px 15px;
+        padding: 15px;
 
-        font-size: 18px;
-        line-height: 20px;
+        font-size: 16px;
+        line-height: 24px;
         background-color: #ffe939;
     }
 
     &-content {
-        width: calc(100% - 160px);
+        width: calc(100% - $navbar-header-width);
         height: $navbar-height;
         display: flex;
         align-items: center;
@@ -34,7 +36,7 @@ $navbar-height: 50px;
     &-item {
         display: block;
         min-width: 60px;
-        padding: 0 24px;
+        padding: 0 12px;
         color: #111;
         font-size: 20px;
         line-height: $navbar-height;
